--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_ENDPOINT:https://secret-temple-43496.herokuapp.com/
-API_KEY:'3160816e-b877-4a6c-86f7-af4a1fafee7d'
+API_ENDPOINT=https://sleepy-hollows-33967.herokuapp.com
+API_KEY=3160816e-b877-4a6c-86f7-af4a1fafee7d
 
 
